--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "antd": "^5.21.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.4.0",
