--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@mui/material": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.21.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
-    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.4.0",
